lanage.jj
options {
  STATIC = false;
  DEBUG_PARSER = false;
}

PARSER_BEGIN(MiniLangParser)
import java.io.*;
import java.util.*;
import ast.*;

public class MiniLangParser {
  public static void main(String[] args) throws Exception {
    MiniLangParser parser = new MiniLangParser(System.in);
    ProgramNode prog = parser.prog();
    System.out.println("Parsing réussi !");
    prog.execute();  // Interprétation
  }
}
PARSER_END(MiniLangParser)

/* ===== TOKENS ===== */
TOKEN: {
  < PROGRAM: "program" >
| < VAR: "var" >
| < FUNC: "func" >
| < PROC: "proc" >
| < MAIN: "main" >
| < IF: "if" >
| < ELSE: "else" >
| < WHILE: "while" >
| < RETURN: "return" >
| < PRINT: "print" >
| < INT: "int" >
| < FLOAT: "float" >
| < BOOLEAN: "boolean" >
| < TRUE: "true" >
| < FALSE: "false" >
| < LEN: "len" >

/* ===== OPÉRATEURS ARITHMÉTIQUES ET DE COMPARAISON ===== */
| < PLUS: "+" >
| < MINUS: "-" >
| < MULT: "*" >
| < DIV: "/" >
| < MOD: "%" >
| < ASSIGN: "=" >
| < PLUSASSIGN: "+=" >
| < MINUSASSIGN: "-=" >
| < MULTASSIGN: "*=" >
| < DIVASSIGN: "/=" >
| < EQ: "==" >
| < NE: "!=" >
| < LE: "<=" >            
| < LT: "<" >
| < GE: ">=" >             
| < GT: ">" >
| < AND: "&&" >
| < OR: "||" >
| < NOT: "!" >

| < IDENTIFIER: ["a"-"z", "A"-"Z", "_"] 
               (["a"-"z", "A"-"Z", "0"-"9", "_"])* >
| < INTEGER: (["0"-"9"])+ >
| < FLOAT_LIT: (["0"-"9"])+ "." (["0"-"9"])+ >
}

SKIP: { " " | "\t" | "\n" | "\r" }


/* ===== GRAMMAIRE ===== */

// prog = "program", identifier, ";", [ vars_globales ], { fonc | proc }, main ;
ProgramNode prog() : {
  Token name;
  List<VarDeclNode> globalVars = new ArrayList<>();

  // On utilise une liste générique ou parente pour accepter Fonctions ET Procédures
  List<FunctionNode> functions = new ArrayList<>(); 
  MainNode main;
  FunctionNode f;
  ProcNode p;
} {
  <PROGRAM> name = <IDENTIFIER> ";"
  
  // Gestion des variables globales
  [ globalVars = vars_globales() ]
  
  // BOUCLE CORRIGÉE :
  // On appelle d'abord la règle (f=fonc()), PUIS on exécute le code Java ({...})
  ( 
      f = fonc() 
      { functions.add(f); }
    | 
      p = proc() 
      // Attention: Assurez-vous que ProcNode hérite de FunctionNode 
      // ou changez le type de la liste 'functions'
      { functions.add((FunctionNode)p); } 
  )*
  
  main = main()
  <EOF>
  
  {
    return new ProgramNode(name.image, globalVars, functions, main);
  }
}


// vars_globales = "var", { decl_var } ;
List<VarDeclNode> vars_globales() : {
  List<VarDeclNode> vars = new ArrayList<>();
  VarDeclNode v;
} {
  <VAR> 
  ( 
    v = decl_var() 
    { vars.add(v); } 
  )*
  { return vars; }
}


// main = "main", "{", { decl_var }, { instr }, "}" ;
MainNode main() : {
  List<VarDeclNode> vars = new ArrayList<>();
  List<InstrNode> instrs = new ArrayList<>();
  VarDeclNode v;
  InstrNode i;
} {
  <MAIN> "{"
  ( 
    v = decl_var() 
    { vars.add(v); } 
  )*
  ( 
    i = instr() 
    { instrs.add(i); } 
  )*
  "}"
  { return new MainNode(vars, instrs); }
}

// type = "int" | "float" | "boolean", [ array_dim ] ;
String type_() : {
  String baseType;
  String arrayDim = "";
} {
  ( <INT> { baseType = "int"; }
  | <FLOAT> { baseType = "float"; }
  | <BOOLEAN> { baseType = "boolean"; }
  )
  [ arrayDim = array_dim() ]
  {
    return baseType + arrayDim;
  }
}

// array_dim = "[", [ integer ], "]" ;
String array_dim() : {
  Token size = null;
} {
  "[" [ size = <INTEGER> ] "]"
  {
    return size != null ? "[" + size.image + "]" : "[]";
  }
}

// decl_var = type, identifier, [ "=" exp ], ";" ;
VarDeclNode decl_var() : {
  String type;
  Token name;
  Node initValue = null;
} {
  type = type_()
  name = <IDENTIFIER>
  [ "=" initValue = exp() ]
  ";"
  {
    return new VarDeclNode(type, name.image, initValue);
  }
}

// instr = assign | appel_fonc | if | while | return | print | block | ";" ;
InstrNode instr() : {
  InstrNode n;
} {
  (
    LOOKAHEAD(2) n = assign()
    | ";" { n = new EmptyInstrNode(); }
    | n = if_()
    | n = while_()
    | n = return_()
    | n = print_()
    | n = block()
    | n = appel_proc()
  )
  { return n; }
}



// assign = lvalue, assign_op, exp, ";" ;
AssignNode assign() : {
  LValueNode lval;
  String op;
  Node exp;
} {
  lval = lvalue()
  op = assign_op()
  exp = exp()
  ";"
  {
    return new AssignNode(lval, op, exp);
  }
}

String assign_op() : {} {
  "=" { return "="; }
  | "+=" { return "+="; }
  | "-=" { return "-="; }
  | "*=" { return "*="; }
  | "/=" { return "/="; }
}

// Expressions avec opérateurs (respect de la priorité)
Node exp() : {
  Node result;
} {
  result = exp_logi()
  {
    return result;
  }
}

Node exp_logi() : {
  Node left, right;
} {
  left = exp_comp()
  ( <OR> right = exp_comp() { left = new BinOpNode(left, "||", right); } )*
  {
    return left;
  }
}

Node exp_comp() : {
  Node left, right;
  String op;
} {
  left = exp_ari()
  (
    ( <GT> { op = ">"; }
    | <LT> { op = "<"; }
    | <GE> { op = ">="; }
    | <LE> { op = "<="; }
    | <EQ> { op = "=="; }
    | <NE> { op = "!="; }
    )
    right = exp_ari() { left = new BinOpNode(left, op, right); }
  )*
  {
    return left;
  }
}




Node exp_ari() : {
  Node left, right;
  String op;
} {
  left = term()
  ( ( "+" { op = "+"; } | "-" { op = "-"; } )
    right = term() { left = new BinOpNode(left, op, right); }
  )*
  {
    return left;
  }
}


Node term() : {
  Node left, right;
  String op;
} {
  left = factor()
  ( ( "*" { op = "*"; } | "/" { op = "/"; } )
    right = factor() { left = new BinOpNode(left, op, right); }
  )*
  {
    return left;
  }
}

Node factor() : {
  Token num;
  Node expr;
} {
  num = <INTEGER> { return new IntLitNode(Integer.parseInt(num.image)); }
  | num = <FLOAT_LIT> { return new FloatLitNode(Float.parseFloat(num.image)); }
  | <TRUE> { return new BoolLitNode(true); }
  | <FALSE> { return new BoolLitNode(false); }
  | LOOKAHEAD(2) expr = appel_fonc() { return expr; }
  | expr = lvalue() { return expr; }
  | "(" expr = exp() ")" { return expr; }
  | "!" expr = factor() { return new UnOpNode("!", expr); }
}

LValueNode lvalue() : {
  Token id;
  Node index = null;
} {
  id = <IDENTIFIER>
  [ "[" index = exp() "]" ]
  {
    return new LValueNode(id.image, index);
  }
}

IfNode if_() : {
  Node cond;
  BlockNode ifBlock, elseBlock = null;
} {
  <IF> "(" cond = exp() ")" ifBlock = block()
  [ <ELSE> elseBlock = block() ]
  {
    return new IfNode(cond, ifBlock, elseBlock);
  }
}

WhileNode while_() : {
  Node cond;
  BlockNode body;
} {
  <WHILE> "(" cond = exp() ")" body = block()
  {
    return new WhileNode(cond, body);
  }
}

ReturnNode return_() : {
  Node value = null;
} {
  <RETURN> [ value = exp() ] ";"
  {
    return new ReturnNode(value);
  }
}

PrintNode print_() : {
  Node expr;
} {
  <PRINT> "(" expr = exp() ")"
  {
    return new PrintNode(expr);
  }
}

BlockNode block() : {
  List<VarDeclNode> vars = new ArrayList<>();
  List<InstrNode> instrs = new ArrayList<>();
  VarDeclNode v;
  InstrNode i;
} {
  "{"
  ( 
    v = decl_var() 
    { vars.add(v); } 
  )*
  ( 
    i = instr() 
    { instrs.add(i); } 
  )*
  "}"
  { return new BlockNode(vars, instrs); }
}


FunctionNode fonc() : {
  String type;
  Token name;
  List<ParamNode> params = new ArrayList<>();
  List<VarDeclNode> vars = new ArrayList<>();
  List<InstrNode> instrs = new ArrayList<>();
  VarDeclNode v;
  InstrNode i;
} {
  <FUNC> type = type_() name = <IDENTIFIER> "("
  [ params = params() ]
  ")" "{"
  ( 
    v = decl_var() 
    { vars.add(v); } 
  )*
  ( 
    i = instr() 
    { instrs.add(i); } 
  )*
  "}"
  { return new FunctionNode(type, name.image, params, vars, instrs); }
}


ProcNode proc() : {
  Token name;
  List<ParamNode> params = new ArrayList<>();
  List<VarDeclNode> vars = new ArrayList<>();
  List<InstrNode> instrs = new ArrayList<>();
  VarDeclNode v;
  InstrNode i;
} {
  <PROC> name = <IDENTIFIER> "("
  [ params = params() ]
  ")" "{"
  ( 
    v = decl_var() 
    { vars.add(v); } 
  )*
  ( 
    i = instr() 
    { instrs.add(i); } 
  )*
  "}"
  { return new ProcNode(name.image, params, vars, instrs); }
}


List<ParamNode> params() : {
  List<ParamNode> params = new ArrayList<>();
  String type;
  Token name;
} {
  type = type_() name = <IDENTIFIER> 
  { params.add(new ParamNode(type, name.image)); }
  ( "," type = type_() name = <IDENTIFIER> 
    { params.add(new ParamNode(type, name.image)); }
  )*
  {
    return params;
  }
}

Node appel_fonc() : {
  Token name;
  List<Node> args = new ArrayList<>();
} {
  name = <IDENTIFIER> "("
  [ args = arguments() ]
  ")"
  {
    return new FuncCallNode(name.image, args);
  }
}

InstrNode appel_proc() : {
  Token name;
  List<Node> args = new ArrayList<>();
} {
  name = <IDENTIFIER> "("
  [ args = arguments() ]
  ")" ";"
  {
    return new ProcCallNode(name.image, args);
  }
}

List<Node> arguments() : {
  List<Node> args = new ArrayList<>();
  Node expr;
} {
  expr = exp() { args.add(expr); }
  ( "," expr = exp() { args.add(expr); } )*
  {
    return args;
  }
}
