MiniLangParser.java
/* MiniLangParser.java */
/* Generated By:JavaCC: Do not edit this line. MiniLangParser.java */
import java.io.*;
import java.util.*;
import ast.*;

public class MiniLangParser implements MiniLangParserConstants {
  public static void main(String[] args) throws Exception {
    MiniLangParser parser = new MiniLangParser(System.in);
    ProgramNode prog = parser.prog();
    System.out.println("Parsing r\u00e9ussi !");
    prog.execute(null);  // Interprétation
  }

/* ===== GRAMMAIRE ===== */

// prog = "program", identifier, ";", [ vars_globales ], { fonc | proc }, main ;
  final public ProgramNode prog() throws ParseException {Token name;
  List<VarDeclNode> globalVars = new ArrayList<>();

  // On utilise une liste générique ou parente pour accepter Fonctions ET Procédures
  List<FunctionNode> functions = new ArrayList<>();
  MainNode main;
  FunctionNode f;
  ProcNode p;
    jj_consume_token(PROGRAM);
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(46);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:{
      globalVars = vars_globales();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FUNC:
      case PROC:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FUNC:{
        f = fonc();
functions.add(f);
        break;
        }
      case PROC:{
        p = proc();
functions.add((FunctionNode)p);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    main = main();
    jj_consume_token(0);
{if ("" != null) return new ProgramNode(name.image, globalVars, functions, main);}
    throw new Error("Missing return statement in function");
}

// vars_globales = "var", { decl_var } ;
  final public List<VarDeclNode> vars_globales() throws ParseException {List<VarDeclNode> vars = new ArrayList<>();
  VarDeclNode v;
    jj_consume_token(VAR);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case FLOAT:
      case BOOLEAN:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      v = decl_var();
vars.add(v);
    }
{if ("" != null) return vars;}
    throw new Error("Missing return statement in function");
}

// main = "main", "{", { decl_var }, { instr }, "}" ;
  final public MainNode main() throws ParseException {List<VarDeclNode> vars = new ArrayList<>();
  List<InstrNode> instrs = new ArrayList<>();
  VarDeclNode v;
  InstrNode i;
    jj_consume_token(MAIN);
    jj_consume_token(47);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case FLOAT:
      case BOOLEAN:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      v = decl_var();
vars.add(v);
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case FOR:
      case RETURN:
      case PRINT:
      case IDENTIFIER:
      case 46:
      case 47:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      i = instr();
instrs.add(i);
    }
    jj_consume_token(48);
{if ("" != null) return new MainNode(vars, instrs);}
    throw new Error("Missing return statement in function");
}

// type = "int" | "float" | "boolean", [ array_dim ] ;
  final public String type_() throws ParseException {String baseType;
  String arrayDim = "";
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
baseType = "int";
      break;
      }
    case FLOAT:{
      jj_consume_token(FLOAT);
baseType = "float";
      break;
      }
    case BOOLEAN:{
      jj_consume_token(BOOLEAN);
baseType = "boolean";
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 49:{
      arrayDim = array_dim();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
{if ("" != null) return baseType + arrayDim;}
    throw new Error("Missing return statement in function");
}

// array_dim = "[", [ integer ], "]" ;
  final public String array_dim() throws ParseException {Token size = null;
    jj_consume_token(49);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER:{
      size = jj_consume_token(INTEGER);
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(50);
{if ("" != null) return size != null ? "[" + size.image + "]" : "[]";}
    throw new Error("Missing return statement in function");
}

// decl_var = type, identifier, [ "=" exp ], ";" ;
  final public VarDeclNode decl_var() throws ParseException {String type;
  Token name;
  Node initValue = null;
    type = type_();
    name = jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      initValue = exp();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(46);
{if ("" != null) return new VarDeclNode(type, name.image, initValue);}
    throw new Error("Missing return statement in function");
}

// instr = assign | appel_fonc | if | while | for | return | print | block | ";" ;
  final public InstrNode instr() throws ParseException {InstrNode n;
    if (jj_2_1(2)) {
      n = assign();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 46:{
        jj_consume_token(46);
n = new EmptyInstrNode();
        break;
        }
      case IF:{
        n = if_();
        break;
        }
      case WHILE:{
        n = while_();
        break;
        }
      case FOR:{
        n = for_();
        break;
        }
      case RETURN:{
        n = return_();
        break;
        }
      case PRINT:{
        n = print_();
        break;
        }
      case 47:{
        n = block();
        break;
        }
      case IDENTIFIER:{
        n = appel_proc();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return n;}
    throw new Error("Missing return statement in function");
}

// assign = lvalue, assign_op, exp, ";" ;
  final public AssignNode assign() throws ParseException {LValueNode lval;
  String op;
  Node exp;
    lval = lvalue();
    op = assign_op();
    exp = exp();
    jj_consume_token(46);
{if ("" != null) return new AssignNode(lval, op, exp);}
    throw new Error("Missing return statement in function");
}

  final public String assign_op() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
{if ("" != null) return "=";}
      break;
      }
    case PLUSASSIGN:{
      jj_consume_token(PLUSASSIGN);
{if ("" != null) return "+=";}
      break;
      }
    case MINUSASSIGN:{
      jj_consume_token(MINUSASSIGN);
{if ("" != null) return "-=";}
      break;
      }
    case MULTASSIGN:{
      jj_consume_token(MULTASSIGN);
{if ("" != null) return "*=";}
      break;
      }
    case DIVASSIGN:{
      jj_consume_token(DIVASSIGN);
{if ("" != null) return "/=";}
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

// Expressions avec opérateurs (respect de la priorité)
  final public Node exp() throws ParseException {Node result;
    result = exp_logi();
{if ("" != null) return result;}
    throw new Error("Missing return statement in function");
}

  final public Node exp_logi() throws ParseException {Node left, right;
    left = exp_comp();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      jj_consume_token(OR);
      right = exp_comp();
left = new BinOpNode(left, "||", right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  final public Node exp_comp() throws ParseException {Node left, right;
  String op;
    left = exp_ari();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQ:
      case NE:
      case LE:
      case LT:
      case GE:
      case GT:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case GT:{
        jj_consume_token(GT);
op = ">";
        break;
        }
      case LT:{
        jj_consume_token(LT);
op = "<";
        break;
        }
      case GE:{
        jj_consume_token(GE);
op = ">=";
        break;
        }
      case LE:{
        jj_consume_token(LE);
op = "<=";
        break;
        }
      case EQ:{
        jj_consume_token(EQ);
op = "==";
        break;
        }
      case NE:{
        jj_consume_token(NE);
op = "!=";
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = exp_ari();
left = new BinOpNode(left, op, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  final public Node exp_ari() throws ParseException {Node left, right;
  String op;
    left = term();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
op = "+";
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
op = "-";
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = term();
left = new BinOpNode(left, op, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  final public Node term() throws ParseException {Node left, right;
  String op;
    left = factor();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULT:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULT:{
        jj_consume_token(MULT);
op = "*";
        break;
        }
      case DIV:{
        jj_consume_token(DIV);
op = "/";
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = factor();
left = new BinOpNode(left, op, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  final public Node factor() throws ParseException {Token num;
  Node expr;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER:{
      num = jj_consume_token(INTEGER);
{if ("" != null) return new IntLitNode(Integer.parseInt(num.image));}
      break;
      }
    case FLOAT_LIT:{
      num = jj_consume_token(FLOAT_LIT);
{if ("" != null) return new FloatLitNode(Float.parseFloat(num.image));}
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
{if ("" != null) return new BoolLitNode(true);}
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
{if ("" != null) return new BoolLitNode(false);}
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      if (jj_2_2(2)) {
        expr = appel_fonc();
{if ("" != null) return expr;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          expr = lvalue();
{if ("" != null) return expr;}
          break;
          }
        case 51:{
          jj_consume_token(51);
          expr = exp();
          jj_consume_token(52);
{if ("" != null) return expr;}
          break;
          }
        case NOT:{
          jj_consume_token(NOT);
          expr = factor();
{if ("" != null) return new UnOpNode("!", expr);}
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
}

  final public LValueNode lvalue() throws ParseException {Token id;
  Node index = null;
    id = jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 49:{
      jj_consume_token(49);
      index = exp();
      jj_consume_token(50);
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      ;
    }
{if ("" != null) return new LValueNode(id.image, index);}
    throw new Error("Missing return statement in function");
}

  final public IfNode if_() throws ParseException {Node cond;
  BlockNode ifBlock, elseBlock = null;
    jj_consume_token(IF);
    jj_consume_token(51);
    cond = exp();
    jj_consume_token(52);
    ifBlock = block();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      elseBlock = block();
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      ;
    }
{if ("" != null) return new IfNode(cond, ifBlock, elseBlock);}
    throw new Error("Missing return statement in function");
}

  final public WhileNode while_() throws ParseException {Node cond;
  BlockNode body;
    jj_consume_token(WHILE);
    jj_consume_token(51);
    cond = exp();
    jj_consume_token(52);
    body = block();
{if ("" != null) return new WhileNode(cond, body);}
    throw new Error("Missing return statement in function");
}

// for = "for", "(", decl_var, exp, ";", exp, ")", block ;
  final public ForNode for_() throws ParseException {VarDeclNode initVar;
  Node condition;
  Node increment;
  BlockNode body;
    jj_consume_token(FOR);
    jj_consume_token(51);
    initVar = decl_var();
    // int i = 0;
        condition = exp();
    jj_consume_token(46);
    increment = exp();
    jj_consume_token(52);
    body = block();
{if ("" != null) return new ForNode(initVar, condition, increment, body);}
    throw new Error("Missing return statement in function");
}

  final public ReturnNode return_() throws ParseException {Node value = null;
    jj_consume_token(RETURN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:
    case FALSE:
    case NOT:
    case IDENTIFIER:
    case INTEGER:
    case FLOAT_LIT:
    case 51:{
      value = exp();
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(46);
{if ("" != null) return new ReturnNode(value);}
    throw new Error("Missing return statement in function");
}

  final public PrintNode print_() throws ParseException {Node expr;
    jj_consume_token(PRINT);
    jj_consume_token(51);
    expr = exp();
    jj_consume_token(52);
{if ("" != null) return new PrintNode(expr);}
    throw new Error("Missing return statement in function");
}

  final public BlockNode block() throws ParseException {List<VarDeclNode> vars = new ArrayList<>();
  List<InstrNode> instrs = new ArrayList<>();
  VarDeclNode v;
  InstrNode i;
    jj_consume_token(47);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case FLOAT:
      case BOOLEAN:{
        ;
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        break label_9;
      }
      v = decl_var();
vars.add(v);
    }
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case FOR:
      case RETURN:
      case PRINT:
      case IDENTIFIER:
      case 46:
      case 47:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_10;
      }
      i = instr();
instrs.add(i);
    }
    jj_consume_token(48);
{if ("" != null) return new BlockNode(vars, instrs);}
    throw new Error("Missing return statement in function");
}

  final public FunctionNode fonc() throws ParseException {String type;
  Token name;
  List<ParamNode> params = new ArrayList<>();
  List<VarDeclNode> vars = new ArrayList<>();
  List<InstrNode> instrs = new ArrayList<>();
  VarDeclNode v;
  InstrNode i;
    jj_consume_token(FUNC);
    type = type_();
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(51);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case FLOAT:
    case BOOLEAN:{
      params = params();
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    jj_consume_token(52);
    jj_consume_token(47);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case FLOAT:
      case BOOLEAN:{
        ;
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        break label_11;
      }
      v = decl_var();
vars.add(v);
    }
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case FOR:
      case RETURN:
      case PRINT:
      case IDENTIFIER:
      case 46:
      case 47:{
        ;
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        break label_12;
      }
      i = instr();
instrs.add(i);
    }
    jj_consume_token(48);
{if ("" != null) return new FunctionNode(type, name.image, params, vars, instrs);}
    throw new Error("Missing return statement in function");
}

  final public ProcNode proc() throws ParseException {Token name;
  List<ParamNode> params = new ArrayList<>();
  List<VarDeclNode> vars = new ArrayList<>();
  List<InstrNode> instrs = new ArrayList<>();
  VarDeclNode v;
  InstrNode i;
    jj_consume_token(PROC);
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(51);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case FLOAT:
    case BOOLEAN:{
      params = params();
      break;
      }
    default:
      jj_la1[29] = jj_gen;
      ;
    }
    jj_consume_token(52);
    jj_consume_token(47);
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case FLOAT:
      case BOOLEAN:{
        ;
        break;
        }
      default:
        jj_la1[30] = jj_gen;
        break label_13;
      }
      v = decl_var();
vars.add(v);
    }
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case FOR:
      case RETURN:
      case PRINT:
      case IDENTIFIER:
      case 46:
      case 47:{
        ;
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        break label_14;
      }
      i = instr();
instrs.add(i);
    }
    jj_consume_token(48);
{if ("" != null) return new ProcNode(name.image, params, vars, instrs);}
    throw new Error("Missing return statement in function");
}

  final public List<ParamNode> params() throws ParseException {List<ParamNode> params = new ArrayList<>();
  String type;
  Token name;
    type = type_();
    name = jj_consume_token(IDENTIFIER);
params.add(new ParamNode(type, name.image));
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 53:{
        ;
        break;
        }
      default:
        jj_la1[32] = jj_gen;
        break label_15;
      }
      jj_consume_token(53);
      type = type_();
      name = jj_consume_token(IDENTIFIER);
params.add(new ParamNode(type, name.image));
    }
{if ("" != null) return params;}
    throw new Error("Missing return statement in function");
}

  final public Node appel_fonc() throws ParseException {Token name;
  List<Node> args = new ArrayList<>();
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(51);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:
    case FALSE:
    case NOT:
    case IDENTIFIER:
    case INTEGER:
    case FLOAT_LIT:
    case 51:{
      args = arguments();
      break;
      }
    default:
      jj_la1[33] = jj_gen;
      ;
    }
    jj_consume_token(52);
{if ("" != null) return new FuncCallNode(name.image, args);}
    throw new Error("Missing return statement in function");
}

  final public InstrNode appel_proc() throws ParseException {Token name;
  List<Node> args = new ArrayList<>();
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(51);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:
    case FALSE:
    case NOT:
    case IDENTIFIER:
    case INTEGER:
    case FLOAT_LIT:
    case 51:{
      args = arguments();
      break;
      }
    default:
      jj_la1[34] = jj_gen;
      ;
    }
    jj_consume_token(52);
    jj_consume_token(46);
{if ("" != null) return new ProcCallNode(name.image, args);}
    throw new Error("Missing return statement in function");
}
